--- a/src/style/scss/_entryView.scss
+++ b/src/style/scss/_entryView.scss
@@ -59,7 +59,8 @@
     box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.5);
     font-family: "Futura Today Light", Arial, sans-serif;
     font-size: 2em;
-    margin: 10px 0 15px 0;
+    margin: 10px auto 15px auto;
+    max-width: 300px;
     position: relative;
     text-align: center;
 
