--- a/src/style/scss/_infoPanel.scss
+++ b/src/style/scss/_infoPanel.scss
@@ -1,26 +1,31 @@
 .iapp-info-panel {
-    background: rgba(74, 74, 74, 1);
     bottom: 0;
-    //temp
-    display: none;
     color: white;
     font-family: "Futura Today Light", Arial, sans-serif;
-    padding: 25px;
+    overflow: hidden;
     position: absolute;
-    transform: translate(0, 0);
-    transition: transform 300ms ease;
     width: 100%;
     z-index: 550;
-
     strong {
         font-family: "Futura Today DemiBold", Arial, sans-serif;
         font-weight: 400;
     }
 
     &.iapp-hide {
-        transform: translate(0, 100%);
+        z-index: -1;
+        .iapp-info-panel-inner {
+            transform: translate(0, 100%);
+        }
+    }
+
+    .iapp-info-panel-inner {
+        background: $new-blue;
+        padding: 25px;
+        transition: transform 300ms ease;
+        transform: translate(0, 0);
     }
 }
+
 
 .iapp-info-close {
     cursor: pointer;
@@ -38,7 +43,7 @@
 .iapp-info-button {
     cursor: pointer;
     position: absolute;
-    bottom: 25px;
+    bottom: 140px;
     left: 25px;
     z-index: 550;
 }
